--- a/index.html
+++ b/index.html
@@ -9,5 +9,24 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      window.onload = function() {
+        // GA
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-86315549-1', 'auto');
+        ga('send', 'pageview');
+
+        // AddThis Widget
+        var script = document.createElement('script');
+        script.src = '//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-580f6509cebd6882';
+        script.type = 'text/javascript';
+        script.async = true;
+        document.getElementsByTagName('body')[0].appendChild(script);
+      };
+    </script>
   </body>
 </html>
